# digit_recognizer

./: CMakeLists.txt  README.md
digit_recognizer/: CMakeLists.txt  main.c
digit_recognizer/application/include/: dr_application.h  dr_gui.h
digit_recognizer/application/sources/: dr_application.c  dr_gui.c
digit_recognizer/general/include/: dr_utils.h
digit_recognizer/include/: dr_matrix.h  dr_neural_network.h  dr_utils.h
digit_recognizer/include/application/: dr_application.h  dr_gui.h  dr_thread.h
digit_recognizer/include/general/: dr_utils.h
digit_recognizer/include/neural_network/: dr_matrix.h  dr_neural_network.h
digit_recognizer/neural_network/: CMakeLists.txt
digit_recognizer/neural_network/include/: dr_matrix.h
digit_recognizer/neural_network/sources/: dr_matrix.c  dr_neural_network.c
digit_recognizer/sources/: dr_matrix.c  dr_neural_network.c  main.c
digit_recognizer/sources/application/: dr_application.c  dr_gui.c  dr_thread.c
digit_recognizer/sources/neural_network/: dr_matrix.c  dr_neural_network.c
tests/: CMakeLists.txt
tests/include/: dr_testing_matrix.h  dr_testing_neural_network.h
tests/neural_network/include/: dr_testing_matrix.h  dr_testing_neural_network.h
tests/neural_network/sources/: dr_neural_network.c
tests/sources/: dr_matrix.c  dr_neural_network.c  dr_utils.c  main.c
tests/sources/general/: dr_utils.c
tests/sources/neural_network/: dr_matrix.c  dr_neural_network.c
